deployment/base/delivery-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
  labels:
    app: delivery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
      app.type: microservice
  template:
    metadata:
      labels:
        app: delivery-service
        app.type: microservice
      annotations:
        sidecar.opentelemetry.io/inject: "otel-collector"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: delivery-service
          image: host.docker.internal:5000/delivery:latest
          ports:
            - containerPort: 8080
              name: http
